dlp-cmm-uo258318/src/parser/CmmParser.java
// Generated from src/parser/Cmm.g4 by ANTLR 4.8
package parser;

	import ast.*;
	import ast.definitions.*;
	import ast.expressions.*;
	import ast.expressions.Comparator;
	import ast.statements.*;
	import ast.types.*;
	
	import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, ID=36, INT_CONSTANT=37, REAL_CONSTANT=38, 
		CHAR_CONSTANT=39, COMMENT=40, MULTI_LINE_COMMENT=41, WHITE_SPACES=42;
	public static final int
		RULE_program = 0, RULE_definition = 1, RULE_var_definition = 2, RULE_statement = 3, 
		RULE_block = 4, RULE_expression = 5, RULE_arguments = 6, RULE_type = 7;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definition", "var_definition", "statement", "block", "expression", 
			"arguments", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'void'", "'('", "','", "')'", "'{'", "'}'", "';'", "'='", "'if'", 
			"'else'", "'while'", "'return'", "'read'", "'write'", "'int'", "'double'", 
			"'char'", "'['", "']'", "'-'", "'.'", "'*'", "'/'", "'%'", "'+'", "'>'", 
			"'<'", "'>='", "'<='", "'=='", "'!='", "'&&'", "'||'", "'!'", "'struct'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"ID", "INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT", "COMMENT", "MULTI_LINE_COMMENT", 
			"WHITE_SPACES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public DefinitionContext definition;
		public TerminalNode EOF() { return getToken(CmmParser.EOF, 0); }
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 List<Definition> defs = new ArrayList<Definition>(); 
			setState(20); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(17);
				((ProgramContext)_localctx).definition = definition();
				 defs.addAll(((ProgramContext)_localctx).definition.ast); 
				}
				}
				setState(22); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__34))) != 0) );
			setState(24);
			match(EOF);
			 ((ProgramContext)_localctx).ast =  new Program(defs); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public TypeContext type;
		public Token id;
		public TypeContext t1;
		public Token i1;
		public TypeContext t2;
		public Token i2;
		public Var_definitionContext var_definition;
		public StatementContext statement;
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<Var_definitionContext> var_definition() {
			return getRuleContexts(Var_definitionContext.class);
		}
		public Var_definitionContext var_definition(int i) {
			return getRuleContext(Var_definitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		int _la;
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				 Type theType = null; 
				setState(33);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(28);
					match(T__0);
					 theType = VoidType.getInstance(); 
					}
					break;
				case T__14:
				case T__15:
				case T__16:
				case T__34:
					{
					setState(30);
					((DefinitionContext)_localctx).type = type(0);
					 theType = ((DefinitionContext)_localctx).type.ast; 
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(35);
				((DefinitionContext)_localctx).id = match(ID);
				 List<VarDefinition> args = new ArrayList<VarDefinition>(); 
				setState(37);
				match(T__1);
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__34))) != 0)) {
					{
					setState(38);
					((DefinitionContext)_localctx).t1 = ((DefinitionContext)_localctx).type = type(0);
					setState(39);
					((DefinitionContext)_localctx).i1 = match(ID);
					 args.add(new VarDefinition(
								  			(((DefinitionContext)_localctx).t1!=null?(((DefinitionContext)_localctx).t1.start):null).getLine(),
							   				(((DefinitionContext)_localctx).t1!=null?(((DefinitionContext)_localctx).t1.start):null).getCharPositionInLine() + 1,
							   				(((DefinitionContext)_localctx).i1!=null?((DefinitionContext)_localctx).i1.getText():null), ((DefinitionContext)_localctx).t1.ast
								  	)); 
					setState(48);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__2) {
						{
						{
						setState(41);
						match(T__2);
						setState(42);
						((DefinitionContext)_localctx).t2 = ((DefinitionContext)_localctx).type = type(0);
						setState(43);
						((DefinitionContext)_localctx).i2 = match(ID);
						 args.add(new VarDefinition(
									  			(((DefinitionContext)_localctx).t2!=null?(((DefinitionContext)_localctx).t2.start):null).getLine(),
								   				(((DefinitionContext)_localctx).t2!=null?(((DefinitionContext)_localctx).t2.start):null).getCharPositionInLine() + 1,
								   				(((DefinitionContext)_localctx).i2!=null?((DefinitionContext)_localctx).i2.getText():null), ((DefinitionContext)_localctx).t2.ast
									  	)); 
						}
						}
						setState(50);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(53);
				match(T__3);
				 List<Statement> theBody = new ArrayList<Statement>(); 
				setState(55);
				match(T__4);
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__34))) != 0)) {
					{
					{
					setState(56);
					((DefinitionContext)_localctx).var_definition = var_definition();
					 theBody.addAll(((DefinitionContext)_localctx).var_definition.ast); 
					}
					}
					setState(63);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__8) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__19) | (1L << T__33) | (1L << ID) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT))) != 0)) {
					{
					{
					setState(64);
					((DefinitionContext)_localctx).statement = statement();
					 theBody.addAll(((DefinitionContext)_localctx).statement.ast); 
					}
					}
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(72);
				match(T__5);
				 _localctx.ast.add(new FuncDefinition(
						  			((DefinitionContext)_localctx).id.getLine(),
						   			((DefinitionContext)_localctx).id.getCharPositionInLine() + 1,
						   			(((DefinitionContext)_localctx).id!=null?((DefinitionContext)_localctx).id.getText():null),
						   			new FunctionType(
						   				((DefinitionContext)_localctx).id.getLine(),
						   				((DefinitionContext)_localctx).id.getCharPositionInLine() + 1,
						   				theType, args),
						   			theBody
						  	)); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				((DefinitionContext)_localctx).var_definition = var_definition();
				 _localctx.ast.addAll(((DefinitionContext)_localctx).var_definition.ast);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_definitionContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public TypeContext type;
		public Token i1;
		public Token i2;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public Var_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_definition; }
	}

	public final Var_definitionContext var_definition() throws RecognitionException {
		Var_definitionContext _localctx = new Var_definitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			((Var_definitionContext)_localctx).type = type(0);
			setState(80);
			((Var_definitionContext)_localctx).i1 = match(ID);
			 _localctx.ast.add(new VarDefinition(
						  			(((Var_definitionContext)_localctx).type!=null?(((Var_definitionContext)_localctx).type.start):null).getLine(),
					   				(((Var_definitionContext)_localctx).type!=null?(((Var_definitionContext)_localctx).type.start):null).getCharPositionInLine() + 1,
					   				(((Var_definitionContext)_localctx).i1!=null?((Var_definitionContext)_localctx).i1.getText():null), ((Var_definitionContext)_localctx).type.ast
						  	)); 
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(82);
				match(T__2);
				setState(83);
				((Var_definitionContext)_localctx).i2 = match(ID);
				 _localctx.ast.add(new VarDefinition(
							  			(((Var_definitionContext)_localctx).type!=null?(((Var_definitionContext)_localctx).type.start):null).getLine(),
						   				(((Var_definitionContext)_localctx).type!=null?(((Var_definitionContext)_localctx).type.start):null).getCharPositionInLine() + 1,
						   				(((Var_definitionContext)_localctx).i2!=null?((Var_definitionContext)_localctx).i2.getText():null), ((Var_definitionContext)_localctx).type.ast
							  		)); 
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<Statement>();
		public ExpressionContext e1;
		public ExpressionContext e2;
		public Token iftkn;
		public ExpressionContext expression;
		public BlockContext b1;
		public BlockContext b2;
		public Token wh;
		public BlockContext block;
		public Token ret;
		public Token rd;
		public Token wrt;
		public Token ID;
		public ArgumentsContext arguments;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		int _la;
		try {
			setState(157);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				((StatementContext)_localctx).e1 = expression(0);
				setState(93);
				match(T__7);
				setState(94);
				((StatementContext)_localctx).e2 = expression(0);
				setState(95);
				match(T__6);
				 _localctx.ast.add(new Assignment(
								 	(((StatementContext)_localctx).e1!=null?(((StatementContext)_localctx).e1.start):null).getLine(),	
							 		(((StatementContext)_localctx).e1!=null?(((StatementContext)_localctx).e1.start):null).getCharPositionInLine() + 1,
						 			((StatementContext)_localctx).e1.ast, ((StatementContext)_localctx).e2.ast	 		
					 		)); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				((StatementContext)_localctx).iftkn = match(T__8);
				setState(99);
				match(T__1);
				setState(100);
				((StatementContext)_localctx).expression = expression(0);
				setState(101);
				match(T__3);
				setState(102);
				((StatementContext)_localctx).b1 = block();
				 _localctx.ast.add(new IfStatement(
						 			((StatementContext)_localctx).iftkn.getLine(),
						   			((StatementContext)_localctx).iftkn.getCharPositionInLine() + 1,
						   			((StatementContext)_localctx).expression.ast, ((StatementContext)_localctx).b1.ast
						 	)); 
				setState(108);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(104);
					match(T__9);
					setState(105);
					((StatementContext)_localctx).b2 = block();
					 ((IfStatement) _localctx.ast.get(0)).setElsePart(((StatementContext)_localctx).b2.ast); 
					}
					break;
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				((StatementContext)_localctx).wh = match(T__10);
				setState(111);
				match(T__1);
				setState(112);
				((StatementContext)_localctx).expression = expression(0);
				setState(113);
				match(T__3);
				setState(114);
				((StatementContext)_localctx).block = block();
				 _localctx.ast.add(new WhileStatement(
						 			((StatementContext)_localctx).wh.getLine(),
						   			((StatementContext)_localctx).wh.getCharPositionInLine() + 1,
						   			((StatementContext)_localctx).expression.ast, ((StatementContext)_localctx).block.ast
						 	)); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(117);
				((StatementContext)_localctx).ret = match(T__11);
				setState(118);
				((StatementContext)_localctx).expression = expression(0);
				setState(119);
				match(T__6);
				 _localctx.ast.add(new ReturnStatement(
								 	((StatementContext)_localctx).ret.getLine(),
						   			((StatementContext)_localctx).ret.getCharPositionInLine() + 1,
								 	((StatementContext)_localctx).expression.ast 
				   			)); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(122);
				((StatementContext)_localctx).rd = match(T__12);
				setState(123);
				((StatementContext)_localctx).e1 = expression(0);
				 _localctx.ast.add(new ReadStatement(
								 	((StatementContext)_localctx).rd.getLine(),
						   			((StatementContext)_localctx).rd.getCharPositionInLine() + 1,
								 	((StatementContext)_localctx).e1.ast 
				   			)); 
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(125);
					match(T__2);
					setState(126);
					((StatementContext)_localctx).e2 = expression(0);
					 _localctx.ast.add(new ReadStatement(
									 	((StatementContext)_localctx).rd.getLine(),
							   			((StatementContext)_localctx).rd.getCharPositionInLine() + 1,
									 	((StatementContext)_localctx).e2.ast 
					   				)); 
					}
					}
					setState(133);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(134);
				match(T__6);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(136);
				((StatementContext)_localctx).wrt = match(T__13);
				setState(137);
				((StatementContext)_localctx).e1 = expression(0);
				 _localctx.ast.add(new WriteStatement(
								 	((StatementContext)_localctx).wrt.getLine(),
						   			((StatementContext)_localctx).wrt.getCharPositionInLine() + 1,
								 	((StatementContext)_localctx).e1.ast 
				   			)); 
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(139);
					match(T__2);
					setState(140);
					((StatementContext)_localctx).e2 = expression(0);
					 _localctx.ast.add(new WriteStatement(
									 	((StatementContext)_localctx).wrt.getLine(),
							   			((StatementContext)_localctx).wrt.getCharPositionInLine() + 1,
									 	((StatementContext)_localctx).e2.ast 
					   				)); 
					}
					}
					setState(147);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(148);
				match(T__6);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(150);
